--- a/README
+++ b/README
@@ -1,1 +1,13 @@
-Running calendar for the state of kansas
+RunKansas
+==========
+
+RunKansas is a django project with a goal of creating a race calender based upon a users specific needs.
+If a runner wanted to have a race calendar that specified only 5k's on the trail they should have the ability to create that race calendar by custom filters.
+
+Dependencies
+------------
+
+* South
+* Pinax (basic project)
+
+
